[package]
name = "quic-rust-test"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.10.2"
tokio = { version = "1.32.0", features = ["full"] }
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
webpki = "0.22.0"
rcgen = "0.11.1"
futures-util = "0.3.28"
anyhow = "1.0.75"
bytes = "1.5.0"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = { version = "0.9" }
shellexpand = { version = "3.1.0", features = ["path"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
